# pyproject.toml
# ==============
#
# Copying
# -------
#
# Copyright (c) 2018 kado authors and contributors.
#
# This file is part of the *kado* project.
#
# kado is a free software project. You can redistribute it and/or
# modify if under the terms of the MIT License.
#
# This software project is distributed *as is*, WITHOUT WARRANTY OF ANY
# KIND; including but not limited to the WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE and NONINFRINGEMENT.
#
# You should have received a copy of the MIT License along with
# kado. If not, see <http://opensource.org/licenses/MIT>.
#
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "kado"
version = "0.1.0-alpha.1"
authors = ["See AUTHORS.rst <dev@kado.local>"]
maintainers = [
    "Jimmy Thrasibule <dev@jimmy.lt>",
]
description = "An object store."
license = "MIT"
readme = "README.rst"
repository = "https://github.com/spack971/kado"
keywords = ["object", "store"]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
include = [
    "AUTHORS.rst",
    "CONTRIBUTORS.rst",
]

[tool.poetry.dependencies]
python = "^3.6"
semver = "^2.10.0"
xxhash = "^2.0.0"

[tool.poetry.dev-dependencies]
coverage = "*"
